Moved old display_value logic into the new FilterView, saving 70 lines of code.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -117,7 +117,7 @@
                                 <span class="name"
                                       >{{filter.info.friendly_name}}?</span>
                                 <span class="value"
-                                      >{{filter.value}}</span>
+                                      >{{display_value}}</span>
                               </a>
                               {{#if filter.value}}
                                 <a class="clear-filter" {{action "clear"}}
