Make the photo type menu appear beside its label like it used to.
The new Ember view wrapped the menu in a div, moving the menu onto a new line.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -683,6 +683,9 @@ p.vid {
     margin-bottom: 7px;
     text-align: left;
 }
+#plant-id-3 .show div {
+    display: inline;
+}
 #plant-id-3 .show label {
     color: #000;
     font-size: 15px;
