Inspired by John's disgust at extra <script> tags, learned how using an Ember.CollectionView with a non-inline handlebars template produces an unadorned <ul> with real <li> attributes inside of it.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -70,6 +70,7 @@
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
 		</script>
+        {% block ember_templates %}{% endblock %}
     </head>
 
     <body {% block body_attributes %}{% endblock %}>
