--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -2542,6 +2542,24 @@ nav #search-suggest .menu a:hover, #search-suggest .menu li:hover {
    combine nav #search-suggest and #search-suggest items above, etc. */
 
 
+/* Tooltips for working area images and highlighted glossary terms. */
+
+.tooltipsy {
+  border: 1px solid #080;
+  -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -o-border-radius: 1em;
+  -ms-border-radius: 1em;
+  -khtml-border-radius: 1em;
+  border-radius: 1em;
+  -moz-box-shadow: 3px 3px 10px #333333;
+  -webkit-box-shadow: 3px 3px 10px #333333;
+  -o-box-shadow: 3px 3px 10px #333333;
+  box-shadow: 3px 3px 10px #333333;
+  background-color: #fff;
+  padding: 1em;
+}
+
 /* Styles for IE 6-9 browser compatibility prompts */
 
 #ie-note {
