Fix inconsistent section position on the Advanced Map page.
Since removing 'View video' links for videos that aren't ready yet, the paragraph
below the 'map' was jumping around because the plant subgroup boxes could be taller
or shorter depending on whether 'View video' links existed for the visible subgroups.
Set the subgroups to a consistent height.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -2323,6 +2323,7 @@ img.margin-bookcover {
 #advanced-map .plant-subgroup {
    	cursor: default;
     float: left;
+    height: 240px;
    	margin: 0 11px 11px 0;
 	padding: 17px 0 0 0;
 	width: 160px;
