Improve a CSS class name.

--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -62,7 +62,7 @@
             
     <h3>A New Flora for New England</h3>
     
-    <img class="margin-bookcover" 
+    <img class="bookcover" 
         src="/static/images/layout/about_page_bookcover.jpg" alt="Book
         cover: Flora Novae Angliae">
         
