--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1916,7 +1916,7 @@ div.section.namap div.trans {
 	margin: 5px 0 20px 20px;
 }
 
-#about #main img.margin-bookcover {
+#about #main img.bookcover {
 	margin-right: 89px;
 }
 
