--- a/gobotany/simplekey/templates/simplekey/_chrome_frame.html
+++ b/gobotany/simplekey/templates/simplekey/_chrome_frame.html
@@ -2,6 +2,8 @@
         <!--[if lt IE 10]>
         <script type="text/javascript"
             src="http://ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+        <script type="text/javascript"
+            src="/static/scripts/chrome_frame.js"></script>
         <div id="ie-note">
             <p>Welcome to Go Botany! This site runs best using
             <a href="http://www.mozilla.org/en-US/firefox/">Firefox</a>,
@@ -14,19 +16,30 @@
             one-time install.</p>
             <p>After installing it below, please re-start Internet
             Explorer.</p>
+            <p class="dismiss"><a 
+                href="javascript:dismiss_gcf_install();">Skip for now and
+                view the site without Chrome Frame</a></p>
             <img src="/static/images/branding/logo-toplevel.png" alt="">
         </div>
         <script>
-            {# The conditional ensures that this code will only run  #}
-            {# in IE, so we can use the IE-specific attachEvent      #}
-            {# without worry. Set user mode in the URL to install in #}
-            {# single-user, non-admin mode to help ensure success    #}
-            {# so that the user will not have to Enable the plug-in. #}
-	        window.attachEvent("onload", function() {
-	            CFInstall.check({
-                    mode: "inline",
-		            url: "http://www.google.com/chromeframe/?user=true"
+            // If the user asked to hide the GCF install for this
+            // browsing session, do so.
+            var hide_install_cookie = get_cookie('hide_gcf_install');
+            if (hide_install_cookie === 'true') {
+                dismiss_gcf_install();
+            }
+            else {
+                {# The conditional ensures that this code will only run  #}
+                {# in IE, so we can use the IE-specific attachEvent      #}
+                {# without worry. Set user mode in the URL to install in #}
+                {# single-user, non-admin mode to help ensure success    #}
+                {# so that the user will not have to Enable the plug-in. #}
+                window.attachEvent("onload", function() {
+                    CFInstall.check({
+                        mode: "inline",
+                        url: "http://www.google.com/chromeframe/?user=true"
+                    });
                 });
-            });
+            }
         </script>
         <![endif]-->
