Fixed more test by turning off the "unclickable" overlay, and giving the family and genus select elements their old ID back.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -123,6 +123,7 @@
                         <label>Family:</label>
                         {% handlebars %}
                           {{view Ember.Select viewName="select"
+                            elementId="families"
                             contentBinding="App3.family_choices"
                             selectionBinding="App3.family_filter.value"}}
                           <button id="family_clear">Clear</button>
@@ -130,6 +131,7 @@
                         <label>Genus:</label>
                         {% handlebars %}
                           {{view Ember.Select viewName="select"
+                            elementId="genera"
                             contentBinding="App3.genus_choices"
                             selectionBinding="App3.genus_filter.value"}}
                           <button id="genus_clear">Clear<button>
