--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -163,7 +163,7 @@
 
     <div id="intro-overlay">
        <div class="number-of-species">
-            <h1><span class="number">33</span> possible matches</h1>
+            <h1><span class="number">…</span> possible matches</h1>
         </div>
         <div class="number-of-questions">
             <h1>Answer questions here</h1>
