Fix some more functional tests. (#119)
Return the old image-types menu ID to the HTML. After populating the image types menu,
where the image type value is set, call the routine to load the selected image type,
which wasn't always happening on page load, leaving blank image boxes.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -74,6 +74,7 @@
                         <label for="image-types">Show photos of:</label>
                         {% handlebars %}
                           {{view Ember.Select viewName="select"
+                            elementId="image-types"
                             contentBinding="App3.image_types"
                             optionLabelPath="content"
                             optionValuePath="content"
