Add a note about debugging using uncompressed Dojo.
Thanks to JR for pointing out this helpful tip.

--- a/gobotany/simplekey/templates/simplekey/_new_base.html
+++ b/gobotany/simplekey/templates/simplekey/_new_base.html
@@ -47,6 +47,8 @@
         {% include "simplekey/_script_constants.html" %}
 
         <script src="/static/scripts/dojo_config.js"></script>
+        {# In order to get better error messages during debugging, #}
+        {# change 'dojo.js' to 'dojo.js.uncompressed.js' below.    #}
         <script src="/static/scripts/lib/dojo/dojo.js"></script>
         <!-- <script src="/static/scripts/require.js"></script> -->
         {# This block is for adding any page-specific JS. #}
