Fixed #112: the final get-more-questions button now works in Mobile Safari.

--- a/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
+++ b/gobotany/simplekey/templates/simplekey/_results_modal_dialogs.html
@@ -9,7 +9,8 @@
 			<div id="choices">
 				<ul class="char-groups">
                 </ul>
-                <a class="get-choices">Get More Questions</a>
+                <!-- The empty onclick makes $.live() work in Mobile Safari -->
+                <a class="get-choices" onclick="">Get More Questions</a>
 				<div class="clearit"></div>
 			</div>
 		</div>
