Replace phrase 'hone in on' with 'narrow down to. (#124)

--- a/gobotany/simplekey/templates/simplekey/advanced.html
+++ b/gobotany/simplekey/templates/simplekey/advanced.html
@@ -49,7 +49,7 @@
                                 plant you are trying to identify. Then  you get
                                 another pair of choices.</li>
                                 <li>As you march down the choices, you
-                                gradually hone in on your plant.</li>
+                                gradually narrow down to your plant.</li>
                                 <li>The questions are technical and specific,
                                 but botanical terms are all defined and
                                 illustrated.</li>
