--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -21,7 +21,7 @@
         
     <ul>
         <li>Our <a href="{% url simplekey %}">Simple Key</a> is an interactive
-        key to 1,200 species. Answer some questions and hone in on the plant
+        key to 1,200 species. Answer some questions and narrow down to the plant
         you want to identify. <a href="{% url simplekey %}">Get Started!</a>
         </li>
         <li>Using our <a href="{% url advanced-id-tools %}">Advanced Key</a> 
