--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -34,7 +34,7 @@
                         1,200 common native and naturalized
                         New England plants! Observe closely, collect a
                         sample or take a photo, answer some questions,
-                        and hone in on the correct identification.</p>
+                        and narrow down to the correct identification.</p>
                         <a href="{% url simplekey %}"
                             id="cta">Get Started</a>
                     </div>
