--- a/gobotany/simplekey/templates/simplekey/_map_attribution.html
+++ b/gobotany/simplekey/templates/simplekey/_map_attribution.html
@@ -1,4 +1,4 @@
-<p>Data from <a href="http://www.bonap.org/"
-                    title="Biota of North America Program">BONAP</a>.
-                    Updates in progress.</p>
+<p>Adapted from <a href="http://www.bonap.org/"
+                    title="Biota of North America Program">BONAP</a>
+                data</p>
 
