Add bibliography to Teaching Tools page.
Also improve headings, vertical spacing, and other markup. (#126)

--- a/gobotany/simplekey/templates/simplekey/_header.html
+++ b/gobotany/simplekey/templates/simplekey/_header.html
@@ -28,7 +28,7 @@
                     <li class="advanced-id">
                         <a href="{% url advanced-id-tools %}">Advanced ID Tools</a>
                     </li>
-                    <li class="teaching-tools"><a href="{% url teaching-tools-placeholder %}">Teaching Tools</a></li>
+                    <li class="teaching-tools"><a href="{% url teaching-tools %}">Teaching Tools</a></li>
                     <li class="about last"><a href="{% url simplekey-help-about %}">About</a></li>
                 </ul>
                 <div class="clearit"></div>
