--- a/gobotany/simplekey/templates/simplekey/help_about.html
+++ b/gobotany/simplekey/templates/simplekey/help_about.html
@@ -53,7 +53,7 @@
         and teaching tools!</li>
         <li>Share your ideas with other educators using 
         <a href="{% url plantshare-placeholder %}">PlantShare</a> and posting
-        to our <a href="{% url teaching-tools-placeholder %}">Teachers
+        to our <a href="{% url teaching-tools %}">Teachers
             Page</a>.</li>
         <li>During 2012-2013, New England Wild Flower Society will offer free 
         trainings for educators throughout New England on how to use Go
