--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -70,7 +70,7 @@
                     in botany for science students and beginning and amateur
                     botanists. Professors, teachers, and environmental
                     educators can share curricula and teaching ideas.</p>
-                    <a class="learn-more" href="{% url teaching-tools-placeholder %}"
+                    <a class="learn-more" href="{% url teaching-tools %}"
                         >Learn More</a>
                 </div>
 
