Capitalize a heading to match other Help-section heading styles.
Second-level page headings throughout the site, especially seen in the Help
section, are normally capitalized in title case. Exceptions on the site
include the top subheading on the Advanced Map page, which is in the form
of a sentence and uses sentence case. Another exception are the plant group
and subgroup headings on the Levels 1 and 2 pages of the simple key, which
are also sentence case because they function more as list items.

--- a/gobotany/simplekey/templates/simplekey/help_map.html
+++ b/gobotany/simplekey/templates/simplekey/help_map.html
@@ -69,7 +69,7 @@
         <div class="clearit"></div>
     </div>
 
-    <h3>About plant groups and subgroups</h3>
+    <h3>About Plant Groups and Subgroups</h3>
 
     <p>The boxes above show how we have grouped over 3,000 New
     England plants into six major categories, which we call
