Add the word New under Teaching Tools on the home page. (#126)

--- a/gobotany/simplekey/templates/simplekey/index.html
+++ b/gobotany/simplekey/templates/simplekey/index.html
@@ -65,7 +65,7 @@
 
                 <div class="three-col last">
                     <h3>Teaching Tools</h3>
-                    <h5>A useful teaching resource!</h5>
+                    <h5>New: a useful teaching resource!</h5>
                     <p>Go Botany encourages informal, self-directed education
                     in botany for science students and beginning and amateur
                     botanists. Professors, teachers, and environmental
