For #57, eliminated "Uncaught TypeError: Cannot set property 'ontouchstart' of undefined" error message in the jQuery console by disambiguating two unrelated CSS classes that had accidentally been given the same name.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -857,7 +857,7 @@ a.go-to-species-page:active {
     z-index: 100;
 }
 
-.plant-list .plant .img-container {
+.plant-list .plant-img-container {
     width: 160px;
     height: 149px;
     overflow: hidden;
