For #57, a final improvement: two extra species-area renders were often taking place because of a mismatch between the null value that filters use for "no value" and the empty string that the family and genus <select> boxes in fact use for "no value", a mismatch that resulted in an extra setting of the family value and genus value on every page load when the <select> view saw the "illegal" null value and tried to fix it by setting the empty string as the filter's value instead.

--- a/gobotany/simplekey/templates/simplekey/results.html
+++ b/gobotany/simplekey/templates/simplekey/results.html
@@ -126,7 +126,7 @@
                           {{view Ember.Select viewName="select"
                             elementId="families"
                             contentBinding="App3.family_choices"
-                            selectionBinding="App3.family_filter.value"}}
+                            selectionBinding="App3.family_value"}}
                           <button id="family_clear">Clear</button>
                         {% endhandlebars %}
                         <label>Genus:</label>
@@ -134,7 +134,7 @@
                           {{view Ember.Select viewName="select"
                             elementId="genera"
                             contentBinding="App3.genus_choices"
-                            selectionBinding="App3.genus_filter.value"}}
+                            selectionBinding="App3.genus_value"}}
                           <button id="genus_clear">Clear<button>
                         {% endhandlebars %}
                     </div>
