Species pages: Show blank, not No, when nativity data absent. (#131)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -265,11 +265,7 @@
 
                 <div class="section">
                     <h5>Native to North America?</h5>
-                    {% if taxon.north_american_native %}
-                        Yes.
-                    {% else %}
-                        No.
-                    {% endif %}
+                    <p>{{ native_to_north_america }}</p>
                 </div>
 
                 {% if taxon.lookalikes.all|length > 0 %}
