Add instructions to go through plant groups in order. (#134)

--- a/gobotany/simplekey/templates/simplekey/help_start.html
+++ b/gobotany/simplekey/templates/simplekey/help_start.html
@@ -47,6 +47,9 @@
             To do this, compare the features of your plant with
             the "Key Characteristics" listed for each plant group and
             "Exceptions," which will help you avoid mixing up groups.</li>
+            <li>Please go through the groups in the order that they
+            appear on the page. This will help you pick the right group
+            by eliminating wrong ones first.</li>
             <li>When you've found the group your plant belongs to, press
             "My plant is in this group."</li>
         </ul>
@@ -90,6 +93,9 @@
             <li>Next, choose which subgroup your plant belongs to. For
             example, if your plant is woody like a tree, you'll be asked if
             it is a needle-leaved plant or a broad-leaved plant.</li>
+            <li>Please go through the subgroups in the order that they
+            appear on the page. This will help you pick the right group
+            by eliminating wrong ones first.</li>
             <li>When you've found the subgroup your plant belongs to, click
             "My plant is in this subgroup."</li>
             <li>If your plant doesn't fit any of the subgroups, click the
