--- a/gobotany/simplekey/templates/simplekey/pilegroup.html
+++ b/gobotany/simplekey/templates/simplekey/pilegroup.html
@@ -27,6 +27,8 @@
                 
                 <h2>{{ subgroups_list_page.main_heading }}</h2>
 
+                <p class="tip">Please go through the subgroups in order.</p>
+
                 <div class="clearit"></div>
 
                 {% for pile, pile_images, pile_url in piles %}
