--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -26,6 +26,8 @@
 
                 <h2>{{ groups_list_page.main_heading }}</h2>
 
+                <p class="tip">Please go through the groups in order.</p>
+
                 <div class="clearit"></div>
 
                 {% for pilegroup, pilegroup_images, pilegroup_url in pilegroups %}
