--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -397,6 +397,15 @@ body.app {
 	height: 66px;
 	background: url(/static/images/layout/newfs-logo-app.png) no-repeat transparent;	
 }
+
+.app p.tip {
+    color: #519136;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    margin: 12px 0 0;
+    padding: 0;
+}
+
 .app nav {
 	padding: 0 0 0 48px;
 	background: url(/static/images/layout/nav-app-green.png) no-repeat; 	
