--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -149,7 +149,11 @@
                 </ul>
                 
                 <h3>Wetland Plant?</h3>
-                <p>{{ taxon.wetland_status_text }}</p>
+                <p>{{ taxon.wetland_status_text }} 
+                {% if taxon.wetland_status_text != 'not classified' %}
+                    ({{ taxon.wetland_status_code }})
+                {% endif %}
+                </p>
                 
                 <h3>New England Distribution and Conservation Status</h3>
                 <table>
