Label the wetland indicator codes on species pages. (#135)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -151,7 +151,7 @@
                 <h3>Wetland Plant?</h3>
                 <p>{{ taxon.wetland_status_text }} 
                 {% if taxon.wetland_status_text != 'not classified' %}
-                    ({{ taxon.wetland_status_code }})
+                    (Wetland indicator code: {{ taxon.wetland_status_code }})
                 {% endif %}
                 </p>
                 
