Fix: Plants with multiple wetland codes no longer show 'not classified.'
Previously, on species pages, plants with multiple wetland indicator codes showed
'not classified.' With this fix, the first of multiple codes is now shown. Any
additional codes are ignored by the importer because wetland indicator categories
represent non-overlapping, mutually exclusive probability ranges, so it does not
appear to be valid to have more than one for each plant. Also, wetland codes and
the text that appears in the user interface have been moved out of the importer
code and into a new CSV file. (#135)

--- a/gobotany/simplekey/templates/simplekey/species.html
+++ b/gobotany/simplekey/templates/simplekey/species.html
@@ -149,11 +149,15 @@
                 </ul>
                 
                 <h3>Wetland Plant?</h3>
-                <p>{{ taxon.wetland_status_text }} 
-                {% if taxon.wetland_status_text != 'not classified' %}
-                    (Wetland indicator code: {{ taxon.wetland_status_code }})
+                {% if taxon.wetland_indicator_code %}
+                    <p>
+                        {{ taxon.wetland_indicator_text }}
+                        (Wetland indicator code:
+                        {{ taxon.wetland_indicator_code }})
+                    </p>
+                {% else %}
+                    <p>Not classified</p>
                 {% endif %}
-                </p>
                 
                 <h3>New England Distribution and Conservation Status</h3>
                 <table>
