Correct the typeface on full-key species page banner, which broke with #100.

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1570,6 +1570,7 @@ div.working-area .actions {
     border-bottom: 1px solid #ad9f50;
     border-top: 1px solid #ad9f50;
     color: #000;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     font-size: 24px;
     margin-bottom: 0.5em;
     padding: 0.5em 0;
